--- a/WorkingwStringsandRegexStarter.ipynb
+++ b/WorkingwStringsandRegexStarter.ipynb
@@ -43,8 +43,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc284002-8c74-4c52-bd8c-bc07538e08a6",
+   "metadata": {},
+   "source": [
+    "## Import RegEX"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "31555171-c27a-4d3d-a25d-21f3552ba5ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "f0c06203-509c-4950-a198-a53f8ea76e6a",
    "metadata": {},
    "outputs": [
@@ -99,6 +117,21 @@
        "      <td>Amena Khan</td>\n",
        "      <td>Atlanta, GA, https://amenakanedesigsolutionsfake.com (521)8760988</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mary Brown</td>\n",
+       "      <td>876-999-3465 Boise, ID, https://marybrowndesignfake.com/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Lakshmi Patel</td>\n",
+       "      <td>http://lpatelfake.net 789.4365952 Topeka,  KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Anna Garcia</td>\n",
+       "      <td>431-000-9999 Atlanta, GA, https://docplayer.net/12921920-Anna-garcia-questions-anna-garcia-cluesfake.html</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -110,16 +143,22 @@
        "2        Jane Doe   \n",
        "3  David Williams   \n",
        "4      Amena Khan   \n",
+       "5      Mary Brown   \n",
+       "6   Lakshmi Patel   \n",
+       "7     Anna Garcia   \n",
        "\n",
-       "                                                                     1  \n",
-       "0      543.216.8987 Oakland, CA, https://johnsmithphotographyfake.net/  \n",
-       "1        Phoenix, AZ, https://www.barbara-lopezfake.com/ (165)555-5981  \n",
-       "2                   9079870987 Little Rock, AR, http://janedoefake.com  \n",
-       "3  https://www.linked-in.com/in/dwilliamsfake 765-143-9900 Denver, CO   \n",
-       "4    Atlanta, GA, https://amenakanedesigsolutionsfake.com (521)8760988  "
+       "                                                                                                           1  \n",
+       "0                                            543.216.8987 Oakland, CA, https://johnsmithphotographyfake.net/  \n",
+       "1                                              Phoenix, AZ, https://www.barbara-lopezfake.com/ (165)555-5981  \n",
+       "2                                                         9079870987 Little Rock, AR, http://janedoefake.com  \n",
+       "3                                        https://www.linked-in.com/in/dwilliamsfake 765-143-9900 Denver, CO   \n",
+       "4                                          Atlanta, GA, https://amenakanedesigsolutionsfake.com (521)8760988  \n",
+       "5                                                   876-999-3465 Boise, ID, https://marybrowndesignfake.com/  \n",
+       "6                                                              http://lpatelfake.net 789.4365952 Topeka,  KS  \n",
+       "7  431-000-9999 Atlanta, GA, https://docplayer.net/12921920-Anna-garcia-questions-anna-garcia-cluesfake.html  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +166,7 @@
    "source": [
     "# load in data\n",
     "df = pd.read_csv('Data/String_Cleaning.csv', header = None)\n",
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -144,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "e6b394da-d267-4b56-9ca6-acc22b826e57",
    "metadata": {},
    "outputs": [
@@ -259,7 +298,7 @@
        "7   431-000-9999  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +306,7 @@
    "source": [
     "# Extract phone number\n",
     "# add pattern for phone numbers between ()\n",
-    "phone = '()'\n",
+    "phone = '([(]?[0-9]{3}[)|.-]?[0-9]{3}[.-]?[0-9]{4})'\n",
     "df['phone_number']= df[1].str.extract(phone)\n",
     "df"
    ]
@@ -283,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "24552614-9870-430a-af0b-da70e0956737",
    "metadata": {},
    "outputs": [
@@ -407,7 +446,7 @@
        "7   431-000-9999    GA  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +454,7 @@
    "source": [
     "# Extract State\n",
     "# add pattern for state between ()\n",
-    "state = '()'\n",
+    "state = '([A-Z]{2})'\n",
     "df['state']= df[1].str.extract(state)\n",
     "df"
    ]
@@ -433,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "id": "28b4eb54-d44a-4574-966e-62db2f044379",
    "metadata": {},
    "outputs": [
@@ -566,7 +605,7 @@
        "7   431-000-9999    GA      Atlanta  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +613,7 @@
    "source": [
     "# City names\n",
     "# add pattern for city between ()\n",
-    "city = '()'\n",
+    "city = r'([A-Z]{1}[a-z]+[\\s]?[A-Za-z]+)'\n",
     "df['city'] = df[1].str.extract(city)\n",
     "df"
    ]
@@ -593,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "id": "4b8d9d66-47d4-407b-82e7-4918ce182c61",
    "metadata": {},
    "outputs": [
@@ -745,7 +784,7 @@
        "7  https://docplayer.net/12921920-Anna-garcia-questions-anna-garcia-cluesfake.html  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,10 +792,18 @@
    "source": [
     "# URL\n",
     "# add pattern for url between ()\n",
-    "url = '()'\n",
+    "url = r'\\b([http[s]+?:/[\\S]+)'\n",
     "df['url'] = df[1].str.extract(url)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd869d63-15bf-4efc-be14-b1a6c41d54ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
