--- a/lesson-nlp-w-spacy.ipynb
+++ b/lesson-nlp-w-spacy.ipynb
@@ -809,11 +809,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "5c2551df-6075-4b78-bdad-10730727b3b3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['run', 'central', 'park', 'notice', 'discard', 'mcdonald', 'container', 'surounde', 'buzz', 'fly', 'annoying']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run function with all true args\n",
+    "# Lemmatizing, removing stopwords and punctuation\n",
+    "cleaned_lemmas = preprocess_doc(doc, remove_stopwords=True,remove_punct=True, use_lemmas=True)\n",
+    "print(cleaned_lemmas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c6764f-925c-475f-8c0a-c6e3129c189b",
+   "metadata": {},
+   "source": [
+    "## Batch Preprocessing with SpaCy\n",
+    "\n",
+    "To do so, we do not process our doc with the nlp pipeline directly, as before.\r\n",
+    "\r\n",
+    "Instead, we begin a for loop through through a collection of texts. nlp.pipe(list_of_texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d3e72934-5cf5-46a0-b0b9-94801ce258e0",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# define batch function\n",
+    "def batch_preprocess_texts(\n",
+    "    texts,\n",
+    "    nlp=None,\n",
+    "    remove_stopwords=True,\n",
+    "    remove_punct=True,\n",
+    "    use_lemmas=False,\n",
+    "    disable=[\"ner\"],\n",
+    "    batch_size=50,\n",
+    "    n_process=-1,\n",
+    "):\n",
+    "    \"\"\"Efficiently preprocess a collection of texts using nlp.pipe()\n",
+    "    Args:\n",
+    "        texts (collection of strings): collection of texts to process (e.g. df['text'])\n",
+    "        nlp (spacy pipe), optional): Spacy nlp pipe. Defaults to None; if None, it creates a default 'en_core_web_sm' pipe.\n",
+    "        remove_stopwords (bool, optional): Controls stopword removal. Defaults to True.\n",
+    "        remove_punct (bool, optional): Controls punctuation removal. Defaults to True.\n",
+    "        use_lemmas (bool, optional): lemmatize tokens. Defaults to False.\n",
+    "        disable (list of strings, optional): named pipeline elements to disable. Defaults to [\"ner\"]: Used with nlp.pipe(disable=disable)\n",
+    "        batch_size (int, optional): Number of texts to process in a batch. Defaults to 50.\n",
+    "        n_process (int, optional): Number of CPU processors to use. Defaults to -1 (meaning all CPU cores).\n",
+    "    Returns:\n",
+    "        list of tokens\n",
+    "    \"\"\"\n",
+    "    # from tqdm.notebook import tqdm\n",
+    "    from tqdm import tqdm\n",
+    "    if nlp is None:\n",
+    "        nlp = spacy.load(\"en_core_web_sm\")\n",
+    "    processed_texts = []\n",
+    "    for doc in tqdm(nlp.pipe(texts, disable=disable, batch_size=batch_size, n_process=n_process)):\n",
+    "        tokens = []\n",
+    "        for token in doc:\n",
+    "            # Check if should remove stopwords and if token is stopword\n",
+    "            if (remove_stopwords == True) and (token.is_stop == True):\n",
+    "                # Continue the loop with the next token\n",
+    "                continue\n",
+    "            # Check if should remove stopwords and if token is stopword\n",
+    "            if (remove_punct == True) and (token.is_punct == True):\n",
+    "                continue\n",
+    "            # Check if should remove stopwords and if token is stopword\n",
+    "            if (remove_punct == True) and (token.is_space == True):\n",
+    "                continue\n",
+    "            \n",
+    "            ## Determine final form of output list of tokens/lemmas\n",
+    "            if use_lemmas:\n",
+    "                tokens.append(token.lemma_.lower())\n",
+    "            else:\n",
+    "                tokens.append(token.text.lower())\n",
+    "        processed_texts.append(tokens)\n",
+    "    return processed_texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c2b7ce94-f9f7-436f-b73c-82a0bad805f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:17, 17.97s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['running', 'central', 'park', 'noticed', 'discarded', 'mcdonald', 'container', 'surounded', 'buzzing', 'flies', 'annoying']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run function\n",
+    "\n",
+    "# Default args will produce tokens\n",
+    "tokens = batch_preprocess_texts([sample_text])\n",
+    "tokens = tokens[0]\n",
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641cff62-6c81-4aaf-8f06-105bbcf654bc",
+   "metadata": {},
+   "source": [
+    "### More with SpaCy docs (metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "80d54f85-404c-49d8-8e95-01fbf70d5939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extracting sentences from doc\n",
+    "\n",
+    "sample_text = \"While running in Central Park, I noticed that the constant buzzing of flies was annoying. However, I couldn't be too upset as they were likely attracted to the McDonald's food that someone carelessly dropped. I wondered, 'How can they be so uncaring?'\"\n",
+    "doc = nlp(sample_text)\n",
+    "\n",
+    "\n",
+    "sentences = list(doc.sents)\n",
+    "len(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4cfb201c-8789-4361-9e58-dc8c0aee2229",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "While running in Central Park, I noticed that the constant buzzing of flies was annoying."
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the first sentence\n",
+    "sentences[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f7a5de63-dbcc-47a1-9085-237275345be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Central Park LOC\n",
+      "McDonald ORG\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print any named entities in the doc and its label\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
+   ]
   }
  ],
  "metadata": {
