--- a/practice-spacy-freqdist.ipynb
+++ b/practice-spacy-freqdist.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x200284c0b50>"
+       "<spacy.lang.en.English at 0x2a877b10e20>"
       ]
      },
      "execution_count": 1,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5c596f63-5bc3-44e2-aa3b-64c1a8112729",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2116ef29-f4fd-4698-859c-274168f3e6d2",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b462169a-ec96-4183-bea2-2e02e51b7b6c",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "spacy.tokens.doc.Doc"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7c49609c-81fd-48cb-93f2-98391721af42",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "I noticed a discarded McDonald's container,surounded by buzzing flies was annoying."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "77893135-69b7-4b47-a0ff-1b3244697f8e",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "cbe930db-f281-4fa0-900c-598063cd12a2",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "running"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "5bd54cc7-8156-4bea-8c2d-b83d1ee98316",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "be698b2d-000f-462b-8d6d-5b5f47b94517",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "28aa672d-c092-4975-9803-4590d4c027e5",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7d3dcaf2-147d-4a1b-98c8-3d32b65b2890",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "702070dc-44f2-4f61-a67a-56eefce42c8d",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "b7915673-9d21-471a-a606-e68f55dfa20b",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "9        a        a    DET      True      False      False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "3e6024ba-d3ae-45e6-962d-f598be9abdb8",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "4d6b02d7-8aa5-4e84-aa1b-b20e018b1d83",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "e2901779-32d3-4eb0-a9f9-ad27bf61231a",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "5499b71f-e6f6-4552-b3f5-91daef87bbf3",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "87df449b-4d1a-4ae8-97a3-123c6cc7b54b",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "00500a0d-ff1a-40ed-8cd2-d01c06f3a3c4",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "b7c18518-8e10-46e1-ba8a-66eb6bf00ded",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "bc782770-86ce-4d58-b9af-cc484b0c37d9",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "5c2551df-6075-4b78-bdad-10730727b3b3",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "d3e72934-5cf5-46a0-b0b9-94801ce258e0",
    "metadata": {},
    "outputs": [],
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "c2b7ce94-f9f7-436f-b73c-82a0bad805f6",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:17, 17.97s/it]"
+      "1it [00:18, 18.63s/it]"
      ]
     },
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "80d54f85-404c-49d8-8e95-01fbf70d5939",
    "metadata": {},
    "outputs": [
@@ -956,7 +956,7 @@
        "3"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "4cfb201c-8789-4361-9e58-dc8c0aee2229",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
        "While running in Central Park, I noticed that the constant buzzing of flies was annoying."
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "f7a5de63-dbcc-47a1-9085-237275345be7",
    "metadata": {},
    "outputs": [
@@ -1016,12 +1016,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53d755d5-1449-45ad-8c2e-6a3dcacb3f03",
+   "cell_type": "markdown",
+   "id": "c79ac527-3a15-4a51-b616-ae34ced7d14f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Practice - SpaCy and FreqDist\n",
+    "\n",
+    "Return to the Dracula text from the word clouds practice assignment. You can continue working in the same notebook. (Bram Stoker's Dracula text found here. Refer to the top of the lesson \"Word Cloud\" for assistance in reading in the .txt. data.)ms_texts function"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "163571fb-82cf-4558-814a-6374652d6ad3",
+   "metadata": {},
+   "source": [
+    "Your task is to create a frequency plot of:\n",
+    "\n",
+    "the 30 most common tokens in Dracula\n",
+    "the 30 most common lemmas in Dracula\n",
+    "Define a spaCy pipeline using 'en_core_web_sm'\n",
+    "Create a spaCy doc object from the Dracula text\n",
+    "Create tokens\n",
+    "exclude stopwords\n",
+    "exclude punctuation\n",
+    "Obtain the frequency distribution of the 30 most common tokens\n",
+    "Create lemmas\n",
+    "exclude stopwords\n",
+    "exclude punctuation\n",
+    "Obtain the frequency distribution of the 30 most common lemmas\n",
+    "Hint: Use the custom batch_preprocess_texts function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5f85e89e-4d5d-4b06-824f-360c7f8d5421",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'charmap' codec can't decode byte 0x9d in position 1094: character maps to <undefined>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Use with open syntax\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(fpath) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 6\u001b[0m     txt \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Report length of the text\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere are \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(txt)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m characters in the full text.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\dojo-env\\lib\\encodings\\cp1252.py:23\u001b[0m, in \u001b[0;36mIncrementalDecoder.decode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcodecs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcharmap_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdecoding_table\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x9d in position 1094: character maps to <undefined>"
+     ]
+    }
+   ],
+   "source": [
+    "# load data\n",
+    "# Define the filepath\n",
+    "fpath= \"Data/Dracula.txt\"\n",
+    "# Use with open syntax\n",
+    "with open(fpath) as f:\n",
+    "    txt = f.read()\n",
+    "# Report length of the text\n",
+    "print(f\"There are {len(txt)} characters in the full text.\\n\")"
+   ]
   }
  ],
  "metadata": {
