preprocess with spacy

--- a/core-comparing-texts.ipynb
+++ b/core-comparing-texts.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6f5e5857-39aa-46d2-859c-88886aa97dc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# packages\n",
     "import pandas as pd\n",
-    "import nltk"
+    "import nltk\n",
+    "import spacy"
    ]
   },
   {
@@ -453,7 +454,7 @@
    "id": "3574c6cd-d6f0-4ed7-903d-701f140acef7",
    "metadata": {},
    "source": [
-    "### Create Tokens column"
+    "### Create Tokens"
    ]
   },
   {
@@ -576,12 +577,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c3ebb9d-0dbb-4355-9590-86e8c14a40a9",
+   "metadata": {},
+   "source": [
+    "### Create Lemmas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c08a8f7-d62f-4f95-858e-09444c33e227",
+   "execution_count": 15,
+   "id": "a2ef940e-0bed-4559-a2e8-b8f4f00e03d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tok2vec', 'tagger', 'attribute_ruler', 'lemmatizer']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load spacy model with parser and ner disabled\n",
+    "nlp_model = spacy.load('en_core_web_sm', disable=['parser', 'ner'])\n",
+    "\n",
+    "# verify parser and ner not loaded\n",
+    "nlp_model.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ceef3234-84da-47cd-ad6b-4f21402c0e4c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## [V1 List Comp] Define a function to use spacy to process our text\n",
+    "def spacy_process(text):\n",
+    "        \"\"\"Lemmatize tokens, lower case, remove punctuation, spaces, and stop words\"\"\"\n",
+    "        doc = nlp_model(text)\n",
+    "        processed_doc = [token.lemma_.lower() for token in doc if not token.is_punct and \n",
+    "                         not token.is_space and not token.is_stop and \n",
+    "                         not 'http' in token.lemma_.lower() and 'www' not in token.lemma_.lower()]\n",
+    "        return processed_doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "31cec3f1-2781-4405-8ccc-ff1bcc51e2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>lower_text</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>spacy_lemmas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A whirlwind day in D.C. showcases Trump’s unor...</td>\n",
+       "      <td>Donald Trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>[donald, trump, endorsed, an, unabashedly, non...</td>\n",
+       "      <td>[donald, trump, endorse, unabashedly, noninter...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In Baltimore's call for federal police probe, ...</td>\n",
+       "      <td>While some Justice Department investigations a...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>while some justice department investigations a...</td>\n",
+       "      <td>[while, some, justice, department, investigati...</td>\n",
+       "      <td>[justice, department, investigation, adversari...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>FAKE</td>\n",
+       "      <td>trump proudly declares: most of the people i’v...</td>\n",
+       "      <td>[trump, proudly, declares:, most, of, the, peo...</td>\n",
+       "      <td>[trump, proudly, declare, people, insult, dese...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inside the Trump-Bush melodrama: Decades of te...</td>\n",
+       "      <td>Donald Trump spent a day in January 2014 hobno...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump spent a day in january 2014 hobno...</td>\n",
+       "      <td>[donald, trump, spent, a, day, in, january, 20...</td>\n",
+       "      <td>[donald, trump, spend, day, january, 2014, hob...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shutdown clash to return in force by December</td>\n",
+       "      <td>Notable names include Ray Washburne (Commerce)...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>notable names include ray washburne (commerce)...</td>\n",
+       "      <td>[notable, names, include, ray, washburne, (com...</td>\n",
+       "      <td>[notable, name, include, ray, washburne, comme...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  A whirlwind day in D.C. showcases Trump’s unor...   \n",
+       "1  In Baltimore's call for federal police probe, ...   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...   \n",
+       "3  Inside the Trump-Bush melodrama: Decades of te...   \n",
+       "4      Shutdown clash to return in force by December   \n",
+       "\n",
+       "                                                text label  \\\n",
+       "0  Donald Trump endorsed an unabashedly noninterv...  REAL   \n",
+       "1  While some Justice Department investigations a...  REAL   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...  FAKE   \n",
+       "3  Donald Trump spent a day in January 2014 hobno...  REAL   \n",
+       "4  Notable names include Ray Washburne (Commerce)...  REAL   \n",
+       "\n",
+       "                                          lower_text  \\\n",
+       "0  donald trump endorsed an unabashedly noninterv...   \n",
+       "1  while some justice department investigations a...   \n",
+       "2  trump proudly declares: most of the people i’v...   \n",
+       "3  donald trump spent a day in january 2014 hobno...   \n",
+       "4  notable names include ray washburne (commerce)...   \n",
+       "\n",
+       "                                              tokens  \\\n",
+       "0  [donald, trump, endorsed, an, unabashedly, non...   \n",
+       "1  [while, some, justice, department, investigati...   \n",
+       "2  [trump, proudly, declares:, most, of, the, peo...   \n",
+       "3  [donald, trump, spent, a, day, in, january, 20...   \n",
+       "4  [notable, names, include, ray, washburne, (com...   \n",
+       "\n",
+       "                                        spacy_lemmas  \n",
+       "0  [donald, trump, endorse, unabashedly, noninter...  \n",
+       "1  [justice, department, investigation, adversari...  \n",
+       "2  [trump, proudly, declare, people, insult, dese...  \n",
+       "3  [donald, trump, spend, day, january, 2014, hob...  \n",
+       "4  [notable, name, include, ray, washburne, comme...  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## process the text using the spacy function\n",
+    "df['spacy_lemmas'] = df['text'].apply(spacy_process)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
