join each lemmatized document into a single string.

--- a/core-comparing-texts.ipynb
+++ b/core-comparing-texts.ipynb
@@ -758,6 +758,186 @@
     "df['spacy_lemmas'] = df['text'].apply(spacy_process)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33bcc90f-f27f-4bfe-8c8d-b019a59788de",
+   "metadata": {},
+   "source": [
+    "## 3. Joined lemmatized data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec7497e9-d55e-475f-a62d-c324cbe52dbb",
+   "metadata": {},
+   "source": [
+    "### join each lemmatized document into a single string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6899e2ac-6bb1-46f6-b9bd-803de31fef0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Join list of lemmas into a string with spaces between each lemma\n",
+    "df['lemmas-joined'] = df['spacy_lemmas'].map(lambda x: \" \".join(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "781cdcda-3af8-4005-9989-be2ebf69cc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>lower_text</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>spacy_lemmas</th>\n",
+       "      <th>lemmas-joined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A whirlwind day in D.C. showcases Trump’s unor...</td>\n",
+       "      <td>Donald Trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>[donald, trump, endorsed, an, unabashedly, non...</td>\n",
+       "      <td>[donald, trump, endorse, unabashedly, noninter...</td>\n",
+       "      <td>donald trump endorse unabashedly noninterventi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In Baltimore's call for federal police probe, ...</td>\n",
+       "      <td>While some Justice Department investigations a...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>while some justice department investigations a...</td>\n",
+       "      <td>[while, some, justice, department, investigati...</td>\n",
+       "      <td>[justice, department, investigation, adversari...</td>\n",
+       "      <td>justice department investigation adversarial n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>FAKE</td>\n",
+       "      <td>trump proudly declares: most of the people i’v...</td>\n",
+       "      <td>[trump, proudly, declares:, most, of, the, peo...</td>\n",
+       "      <td>[trump, proudly, declare, people, insult, dese...</td>\n",
+       "      <td>trump proudly declare people insult deserved a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inside the Trump-Bush melodrama: Decades of te...</td>\n",
+       "      <td>Donald Trump spent a day in January 2014 hobno...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump spent a day in january 2014 hobno...</td>\n",
+       "      <td>[donald, trump, spent, a, day, in, january, 20...</td>\n",
+       "      <td>[donald, trump, spend, day, january, 2014, hob...</td>\n",
+       "      <td>donald trump spend day january 2014 hobnob pol...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shutdown clash to return in force by December</td>\n",
+       "      <td>Notable names include Ray Washburne (Commerce)...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>notable names include ray washburne (commerce)...</td>\n",
+       "      <td>[notable, names, include, ray, washburne, (com...</td>\n",
+       "      <td>[notable, name, include, ray, washburne, comme...</td>\n",
+       "      <td>notable name include ray washburne commerce da...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  A whirlwind day in D.C. showcases Trump’s unor...   \n",
+       "1  In Baltimore's call for federal police probe, ...   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...   \n",
+       "3  Inside the Trump-Bush melodrama: Decades of te...   \n",
+       "4      Shutdown clash to return in force by December   \n",
+       "\n",
+       "                                                text label  \\\n",
+       "0  Donald Trump endorsed an unabashedly noninterv...  REAL   \n",
+       "1  While some Justice Department investigations a...  REAL   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...  FAKE   \n",
+       "3  Donald Trump spent a day in January 2014 hobno...  REAL   \n",
+       "4  Notable names include Ray Washburne (Commerce)...  REAL   \n",
+       "\n",
+       "                                          lower_text  \\\n",
+       "0  donald trump endorsed an unabashedly noninterv...   \n",
+       "1  while some justice department investigations a...   \n",
+       "2  trump proudly declares: most of the people i’v...   \n",
+       "3  donald trump spent a day in january 2014 hobno...   \n",
+       "4  notable names include ray washburne (commerce)...   \n",
+       "\n",
+       "                                              tokens  \\\n",
+       "0  [donald, trump, endorsed, an, unabashedly, non...   \n",
+       "1  [while, some, justice, department, investigati...   \n",
+       "2  [trump, proudly, declares:, most, of, the, peo...   \n",
+       "3  [donald, trump, spent, a, day, in, january, 20...   \n",
+       "4  [notable, names, include, ray, washburne, (com...   \n",
+       "\n",
+       "                                        spacy_lemmas  \\\n",
+       "0  [donald, trump, endorse, unabashedly, noninter...   \n",
+       "1  [justice, department, investigation, adversari...   \n",
+       "2  [trump, proudly, declare, people, insult, dese...   \n",
+       "3  [donald, trump, spend, day, january, 2014, hob...   \n",
+       "4  [notable, name, include, ray, washburne, comme...   \n",
+       "\n",
+       "                                       lemmas-joined  \n",
+       "0  donald trump endorse unabashedly noninterventi...  \n",
+       "1  justice department investigation adversarial n...  \n",
+       "2  trump proudly declare people insult deserved a...  \n",
+       "3  donald trump spend day january 2014 hobnob pol...  \n",
+       "4  notable name include ray washburne commerce da...  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verify changes\n",
+    "df.head(3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "506f0f89-1774-4655-950e-1c44f8de2d94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
