check class balance

--- a/core-comparing-texts.ipynb
+++ b/core-comparing-texts.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "781cdcda-3af8-4005-9989-be2ebf69cc5d",
    "metadata": {},
    "outputs": [
@@ -921,20 +921,150 @@
        "4  notable name include ray washburne commerce da...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# verify changes\n",
-    "df.head(3) "
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c353efcf-f6fb-4a7f-83c7-2154ebd17ec9",
+   "metadata": {},
+   "source": [
+    "## Analyze class balance and document lengths:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b958826c-7188-46ef-877f-79eb83efc9be",
+   "metadata": {},
+   "source": [
+    "### 1. What is the class balance? How many real and fake articles are there?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "cf8ee256-8a44-4dce-953c-ab968257ec95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "REAL    0.500552\n",
+       "FAKE    0.499448\n",
+       "Name: label, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# normalized class balance\n",
+    "df['label'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "cd5c53ee-4e01-4f95-ac10-9e8efcd9ea94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "REAL    3171\n",
+       "FAKE    3164\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# raw value count of real vs. fake articles\n",
+    "df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e811cf4c-17d0-45ea-877b-a7b1adc35d78",
+   "metadata": {},
+   "source": [
+    "### 2. What is the average word count for real news articles? What about fake ones?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "506f0f89-1774-4655-950e-1c44f8de2d94",
+   "id": "ffe9c2d1-9c5f-49a4-885b-2d358970943c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8160403d-e951-4db2-bb87-2b222fe89b02",
+   "metadata": {},
+   "source": [
+    "### 3. Hint, you can map the len() function to the tokenized text to create a new column, then find the average of that column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132133a7-57fa-4a50-b251-06cd9c7e981c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e87f9a5d-0fd0-41a5-a761-7f5377b33d99",
+   "metadata": {},
+   "source": [
+    "## Compare the word frequencies:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f99dfbe1-5ee8-499b-9480-584e5f6da3f1",
+   "metadata": {},
+   "source": [
+    "### 1. Create and plot the frequency distribution plots for the 20 most common words in real and fake news articles. (2 total plots)\n",
+    "    Use the lemmatized text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0b1e0d1-0fe8-4ed9-a7b7-ceb9b56a0d5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "497fe6f4-d750-4f6e-9510-e33b08de89a1",
+   "metadata": {},
+   "source": [
+    "### 2. Create word clouds for each of the article types, real and fake (2 total word clouds)\n",
+    "    Use the joined lemmatized text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0e214b2-9804-44e4-8d76-e545f30f5c82",
    "metadata": {},
    "outputs": [],
    "source": []
