--- a/core-comparing-texts.ipynb
+++ b/core-comparing-texts.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "id": "6f5e5857-39aa-46d2-859c-88886aa97dc1",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "# packages\n",
     "import pandas as pd\n",
     "import nltk\n",
-    "import spacy"
+    "import spacy\n",
+    "from nltk.probability import FreqDist"
    ]
   },
   {
@@ -1005,27 +1006,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ffe9c2d1-9c5f-49a4-885b-2d358970943c",
+   "execution_count": 71,
+   "id": "132133a7-57fa-4a50-b251-06cd9c7e981c",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8160403d-e951-4db2-bb87-2b222fe89b02",
-   "metadata": {},
    "source": [
-    "### 3. Hint, you can map the len() function to the tokenized text to create a new column, then find the average of that column."
+    "# map the len() function to the tokenized text to create a new column\n",
+    "df['words'] = list(map(len, df['tokens']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "132133a7-57fa-4a50-b251-06cd9c7e981c",
+   "execution_count": 72,
+   "id": "4f900353-77e3-44fa-b321-a6f50ef6bd16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>lower_text</th>\n",
+       "      <th>tokens</th>\n",
+       "      <th>spacy_lemmas</th>\n",
+       "      <th>lemmas-joined</th>\n",
+       "      <th>words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A whirlwind day in D.C. showcases Trump’s unor...</td>\n",
+       "      <td>Donald Trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump endorsed an unabashedly noninterv...</td>\n",
+       "      <td>[donald, trump, endorsed, an, unabashedly, non...</td>\n",
+       "      <td>[donald, trump, endorse, unabashedly, noninter...</td>\n",
+       "      <td>donald trump endorse unabashedly noninterventi...</td>\n",
+       "      <td>1428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In Baltimore's call for federal police probe, ...</td>\n",
+       "      <td>While some Justice Department investigations a...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>while some justice department investigations a...</td>\n",
+       "      <td>[while, some, justice, department, investigati...</td>\n",
+       "      <td>[justice, department, investigation, adversari...</td>\n",
+       "      <td>justice department investigation adversarial n...</td>\n",
+       "      <td>1091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>Trump Proudly Declares: Most Of The People I’v...</td>\n",
+       "      <td>FAKE</td>\n",
+       "      <td>trump proudly declares: most of the people i’v...</td>\n",
+       "      <td>[trump, proudly, declares:, most, of, the, peo...</td>\n",
+       "      <td>[trump, proudly, declare, people, insult, dese...</td>\n",
+       "      <td>trump proudly declare people insult deserved a...</td>\n",
+       "      <td>408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inside the Trump-Bush melodrama: Decades of te...</td>\n",
+       "      <td>Donald Trump spent a day in January 2014 hobno...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>donald trump spent a day in january 2014 hobno...</td>\n",
+       "      <td>[donald, trump, spent, a, day, in, january, 20...</td>\n",
+       "      <td>[donald, trump, spend, day, january, 2014, hob...</td>\n",
+       "      <td>donald trump spend day january 2014 hobnob pol...</td>\n",
+       "      <td>1959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shutdown clash to return in force by December</td>\n",
+       "      <td>Notable names include Ray Washburne (Commerce)...</td>\n",
+       "      <td>REAL</td>\n",
+       "      <td>notable names include ray washburne (commerce)...</td>\n",
+       "      <td>[notable, names, include, ray, washburne, (com...</td>\n",
+       "      <td>[notable, name, include, ray, washburne, comme...</td>\n",
+       "      <td>notable name include ray washburne commerce da...</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  A whirlwind day in D.C. showcases Trump’s unor...   \n",
+       "1  In Baltimore's call for federal police probe, ...   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...   \n",
+       "3  Inside the Trump-Bush melodrama: Decades of te...   \n",
+       "4      Shutdown clash to return in force by December   \n",
+       "\n",
+       "                                                text label  \\\n",
+       "0  Donald Trump endorsed an unabashedly noninterv...  REAL   \n",
+       "1  While some Justice Department investigations a...  REAL   \n",
+       "2  Trump Proudly Declares: Most Of The People I’v...  FAKE   \n",
+       "3  Donald Trump spent a day in January 2014 hobno...  REAL   \n",
+       "4  Notable names include Ray Washburne (Commerce)...  REAL   \n",
+       "\n",
+       "                                          lower_text  \\\n",
+       "0  donald trump endorsed an unabashedly noninterv...   \n",
+       "1  while some justice department investigations a...   \n",
+       "2  trump proudly declares: most of the people i’v...   \n",
+       "3  donald trump spent a day in january 2014 hobno...   \n",
+       "4  notable names include ray washburne (commerce)...   \n",
+       "\n",
+       "                                              tokens  \\\n",
+       "0  [donald, trump, endorsed, an, unabashedly, non...   \n",
+       "1  [while, some, justice, department, investigati...   \n",
+       "2  [trump, proudly, declares:, most, of, the, peo...   \n",
+       "3  [donald, trump, spent, a, day, in, january, 20...   \n",
+       "4  [notable, names, include, ray, washburne, (com...   \n",
+       "\n",
+       "                                        spacy_lemmas  \\\n",
+       "0  [donald, trump, endorse, unabashedly, noninter...   \n",
+       "1  [justice, department, investigation, adversari...   \n",
+       "2  [trump, proudly, declare, people, insult, dese...   \n",
+       "3  [donald, trump, spend, day, january, 2014, hob...   \n",
+       "4  [notable, name, include, ray, washburne, comme...   \n",
+       "\n",
+       "                                       lemmas-joined  words  \n",
+       "0  donald trump endorse unabashedly noninterventi...   1428  \n",
+       "1  justice department investigation adversarial n...   1091  \n",
+       "2  trump proudly declare people insult deserved a...    408  \n",
+       "3  donald trump spend day january 2014 hobnob pol...   1959  \n",
+       "4  notable name include ray washburne commerce da...     19  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verify changes\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "5eb05bd9-559f-4530-b4d9-665b114cec5e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "real_df = df[df['label'] == 'REAL'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "775b2069-ab50-470b-9556-0a9b187db194",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "873.2576474298329"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# average word count of real articles\n",
+    "real_df['words'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "a7046972-0e2f-470c-a5db-af02b93047a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_df = df[df['label'] == 'FAKE'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "88cb9d62-8cb2-47dd-8c4d-f69a54148d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "679.1292667509482"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# average word count of fake articles\n",
+    "fake_df['words'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1041,16 +1244,36 @@
    "metadata": {},
    "source": [
     "### 1. Create and plot the frequency distribution plots for the 20 most common words in real and fake news articles. (2 total plots)\n",
-    "    Use the lemmatized text"
+    "    Use the lemmatized text (spacy_lemmas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "d0b1e0d1-0fe8-4ed9-a7b7-ceb9b56a0d5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m--------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15348\\834225298.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Split the lemmas into individual token words\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mreal_lemmas_split\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreal_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'spacy_lemmas'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Pass the tokenized lemmas to the class constructor and plot the distribution\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlow_dist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFreqDist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreal_lemmas_split\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlow_dist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'20 Most Common Words in Real News Articles'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5898\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5899\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5900\u001b[0m         ):\n\u001b[0;32m   5901\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5902\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'split'"
+     ]
+    }
+   ],
+   "source": [
+    "# Split the lemmas into individual token words\n",
+    "real_lemmas_split = real_df['spacy_lemmas'].split()\n",
+    "# Pass the tokenized lemmas to the class constructor and plot the distribution \n",
+    "low_dist = FreqDist(real_lemmas_split)\n",
+    "ax = low_dist.plot(20, show = False, title='20 Most Common Words in Real News Articles')\n",
+    "plt.tight_layout()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1058,7 +1281,7 @@
    "metadata": {},
    "source": [
     "### 2. Create word clouds for each of the article types, real and fake (2 total word clouds)\n",
-    "    Use the joined lemmatized text"
+    "    Use the joined lemmatized text (lemmas-joined)"
    ]
   },
   {
